[package]
name = "rsblox"
version = "0.1.0"
edition = "2021"
description = "Launcher for Roblox, using wine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
clap = { version = "4.2", features = ["derive"] }
dialoguer = "0.10.4"
itertools = "0.10.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tokio = { version = "1.27", features = ["full"] }
wincompatlib = { version = "0.4", features = ["dxvk"] }
